Added custom theme, changed button and background colors

--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -35,7 +35,7 @@
             </div>
             <div class="empty-space-2"></div>
             <p align="center">
-                <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
+                <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
             </p>
             <app-scroll-top></app-scroll-top>
 
