--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -114,7 +114,7 @@
                 </mat-card> -->
             </div>
 
-            <button mat-raised-button color="primary" (click)="composeClicked()">Compose Answer</button>
+            <button mat-raised-button color="accent" (click)="composeClicked()">Compose Answer</button>
         </div>
     </div>
 
