--- a/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
+++ b/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
@@ -5,8 +5,8 @@
         Answer was successfully submitted
     </h1>
     <h2>Start entering a new set of questions?</h2>
-    <button mat-raised-button color="primary" [routerLink]="['/upload']">Yes</button>
-    <button mat-raised-button color="alert" [routerLink]="['/endpage']">No</button>
+    <button mat-raised-button color="accent" [routerLink]="['/upload']">Yes</button>
+    <button mat-raised-button color="primary" [routerLink]="['/endpage']">No</button>
 </div>
 
 <app-scroll-top></app-scroll-top>
