--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -13,7 +13,7 @@
                         <mat-card-subtitle>{{doc.author}}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-actions>
-                        <button mat-raised-button color="primary" (click)="answerClicked(doc)">Answer</button>
+                        <button mat-raised-button color="accent" (click)="answerClicked(doc)">Answer</button>
                     </mat-card-actions>
                 </mat-card>
             </li>
