--- a/src/frontend/parlai-app/src/styles.scss
+++ b/src/frontend/parlai-app/src/styles.scss
@@ -1,12 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-.mat-fab.mat-primary,
-.mat-flat-button.mat-primary,
-.mat-mini-fab.mat-primary,
-.mat-raised-button.mat-primary {
-    background-color: #124175 !important;
-}
-
 .top-margin{
     margin-top:5%;
 }
@@ -41,3 +32,5 @@
 .empty-space-2{
     height:22%;
 }
+
+html { background-color: #fafafa; }
