Made texts fit into a mat-toolbar for styling, changed primary color, started working on the navigation bar

--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="sticky" id="systemNav">
+<nav class="sticky" color="primary" id="systemNav">
     <div>
         <img class="system-logo"
              src="assets/logo.png"
