--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -8,15 +8,13 @@
 
     <div class="row">
         <div class="column">
-            <div class="fixed-white-space"> </div>
-            <div class="fixed-text">
-                <h2>Assigned Questions</h2>
-            </div>
+            <mat-toolbar class="mat-elevation-z6" color="primary">
+                <span>Assigned Questions</span>
+            </mat-toolbar>
 
             <div class="empty-space"></div>
             <ul class="card">
-                <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question"
-                    (click)="questionSelected(question)">
+                <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question" (click)="questionSelected(question)">
                     <mat-card class="example-card">
                         <mat-card-header>
                             <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
@@ -33,11 +31,14 @@
                 </li>
             </ul>
         </div>
-        <div class="scrolling-column">
-            <div class="fixed-text">
-                <h2>Relevant Information - Question {{selectedQuestion.id}}</h2>
-            </div>
-            <div class="empty-space-2"></div>
+        
+        <div class="column">
+            
+            <mat-toolbar class="mat-elevation-z6" color="primary">
+                <span>Relevant Information - Question {{selectedQuestion.id}}</span>
+            </mat-toolbar>
+            
+            <div class="empty-space"></div>
 
             <div class="information">
                 <div class="row" *ngIf="selectedQuestion.keywords">
