--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
@@ -1,25 +1,27 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 /* Create two equal columns that floats next to each other */
+
 .column {
     float: left;
     width: 50%;
-    padding: 10px;
-    // height: 300px; /* Should be removed. Only for demonstration */
+    padding: 10px; // height: 300px; /* Should be removed. Only for demonstration */
 }
 
-.scrolling-column{
+.scrolling-column {
     position: fixed;
-    top:8%;
-    left:50%;
+    top: 8%;
+    left: 50%;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 300px;
+    /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
+
 .row:after {
     content: "";
     display: table;
@@ -27,19 +29,20 @@
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 600px) {
     .column {
         width: 100%;
     }
-    .scrolling-column{
-        width:100%;
+    .scrolling-column {
+        width: 100%;
     }
 }
 
 .card {
     list-style-type: none;
     padding-left: 0;
-}  
+}
 
 .card li {
     margin-bottom: 15px;
@@ -51,6 +54,18 @@
 
 .mat-form-field {
     width: 100%;
+}
+
+.mat-toolbar {
+    height: 8%;
+    position: relative;
+    min-height: 32px;
+}
+
+span {
+    margin: auto;
+    display: table;
+
 }
 
 .row {
