--- a/src/frontend/parlai-app/src/app_theme.scss
+++ b/src/frontend/parlai-app/src/app_theme.scss
@@ -1,16 +1,10 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$my-app-primary: mat-palette($mat-indigo);
+$my-app-primary: mat-palette($mat-indigo, 900);
 $my-app-accent: mat-palette($mat-amber, 500, 900, A100);
 $my-app-warn: mat-palette($mat-deep-orange);
-$background-color: map_get($mat-green, 50);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-
-// Insert custom background color
-$background: map-get($my-app-theme, background);
-$background: map_merge($background, (background: $background-color));
-$theme: map_merge($my-app-theme, (background: $background));
 
 @include angular-material-theme($my-app-theme);
