--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.css
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.css
@@ -1,25 +1,35 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 /* Create two equal columns that floats next to each other */
+
 .column {
     float: left;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 300px;
+    /* Should be removed. Only for demonstration */
 }
 
-.scrolling-column{
+.scrollable {
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 83.5vh;
+}
+
+.scrolling-column {
     position: fixed;
-    top:8%;
-    left:50%;
+    top: 8%;
+    left: 50%;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 300px;
+    /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
+
 .row:after {
     content: "";
     display: table;
@@ -27,6 +37,7 @@
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 600px) {
     .column {
         width: 100%;
@@ -52,7 +63,7 @@ span {
 .card {
     list-style-type: none;
     padding-left: 0;
-}  
+}
 
 .card li {
     margin-bottom: 15px;
