--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -8,36 +8,44 @@
 
     <div class="row">
         <div class="column">
+
             <mat-toolbar class="mat-elevation-z6" color="primary">
                 <span>Overview of your Answers</span>
             </mat-toolbar>
+
             <div class="empty-space"></div>
+            <div class="scrollable">
 
-            <ul class="card">
-                <li *ngFor="let question of questions; index as i">
-                    <mat-card class="example-card">
-                        <mat-card-header>
-                            <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
-                            <mat-card-subtitle>{{question.questionClass}}</mat-card-subtitle>
-                        </mat-card-header>
-                        <mat-form-field>
-                            <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
-                        </mat-form-field>
-                    </mat-card>
-                </li>
-            </ul>
-
+                <ul class="card">
+                    <li *ngFor="let question of questions; index as i">
+                        <mat-card class="example-card">
+                            <mat-card-header>
+                                <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
+                                <mat-card-subtitle>{{question.questionClass}}</mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-form-field>
+                                <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
+                            </mat-form-field>
+                        </mat-card>
+                    </li>
+                </ul>
+            </div>
         </div>
+
         <div class="column">
             <mat-toolbar class="mat-elevation-z6" color="primary">
                 <span>Final Document</span>
             </mat-toolbar>
-            <div class="empty-space" style="margin-top:20px"></div>
-            <p align="center">
-                <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
-            </p>
-            <app-scroll-top></app-scroll-top>
 
+            <div class="empty-space" style="margin-top:20px"></div>
+            <div class="scrollable">
+
+                <p align="center">
+                    <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
+                </p>
+                <app-scroll-top></app-scroll-top>
+
+            </div>
         </div>
     </div>
 
