--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -15,8 +15,8 @@
 
             <div class="empty-space"></div>
             <ul class="card">
-                <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question"
-                    (click)="questionSelected(question)">
+                <li *ngFor="let question of questions; index as i" [class.selected]="selectedIndex === i"
+                    (click)="questionSelected(question, i)">
                     <mat-card class="example-card">
                         <mat-card-header>
                             <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
@@ -25,15 +25,11 @@
                         <mat-form-field>
                             <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
                         </mat-form-field>
-                        <mat-card-actions>
-                            <button mat-raised-button color="primary" (click)="questionSelected(question)">Get
-                                Information</button>
-                        </mat-card-actions>
                     </mat-card>
                 </li>
             </ul>
         </div>
-        <div class="scrolling-column">
+        <div class="scrolling-column" *ngIf="selectedIndex !== -1">
             <div class="fixed-text">
                 <h2>Relevant Information - Question {{selectedQuestion.id}}</h2>
             </div>
@@ -115,6 +111,9 @@
             </div>
 
             <button mat-raised-button color="accent" (click)="composeClicked()">Compose Answer</button>
+        </div>
+        <div class="scrolling-column" *ngIf="selectedIndex === -1" [ngStyle]="{fontSize: '40px'}">
+          <div>Please Select One of the Questions to View Information</div>
         </div>
     </div>
 
