--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -15,8 +15,8 @@
 
             <div class="empty-space"></div>
             <ul class="card">
-                <li *ngFor="let question of questions; index as i" [class.selected]="selectedIndex === i"
-                    (click)="questionSelected(question, i)">
+                <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question"
+                    (click)="questionSelected(question)">
                     <mat-card class="example-card">
                         <mat-card-header>
                             <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </div>
-        <div class="scrolling-column" *ngIf="selectedIndex !== -1">
+        <div class="scrolling-column" *ngIf="selectedQuestion">
             <div class="fixed-text">
                 <h2>Relevant Information - Question {{selectedQuestion.id}}</h2>
             </div>
@@ -112,7 +112,7 @@
 
             <button mat-raised-button color="accent" (click)="composeClicked()">Compose Answer</button>
         </div>
-        <div class="scrolling-column" *ngIf="selectedIndex === -1" [ngStyle]="{fontSize: '40px'}">
+        <div class="scrolling-column" *ngIf="!selectedQuestion" [ngStyle]="{fontSize: '25px'}">
           <div>Please Select One of the Questions to View Information</div>
         </div>
     </div>
