--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div style="text-align:center" class="mat-typography">
-        <h1 style="margin-top:75px;"> Hello User, </h1>
+        <h1 style="margin-top:75px;"> Hello {{ user_name }}, </h1>
         <h2 style="margin-top:20px;"> Here's an overview of the questions assigned to you: </h2>
 
         <ul class="card">
@@ -20,12 +20,12 @@
         </ul>
 
         <!-- <div class="form-wrapper">
-            
+
                     <div class="spinner-container" *ngIf="isShowSpinner"></div>
                     <mat-spinner class="spinner-loading" *ngIf="isShowSpinner"></mat-spinner>
-            
+
                     <form [formGroup]="uploadForm" action="#" class="submit-form">
-            
+
                         <div formArrayName="items" *ngFor="let item of uploadForm.get('items').controls; let i = index;">
                             <div [formGroupName]="i">
                                 <mat-form-field class="submit-form-full-width">
@@ -33,10 +33,10 @@
                                 </mat-form-field>
                             </div>
                         </div>
-            
+
                         <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Add new question</button>
                         <button mat-raised-button color="primary" class="uploadButton" (click)="submitQuestion()">Submit all questions</button>
-            
+
                     </form>
                 </div> -->
     </div>
