First attempts to show user information based on userid

--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div style="text-align:center" class="mat-typography">
-        <h1 style="margin-top:75px;"> Hello {{ user_name }}, </h1>
+        <h1 style="margin-top:75px;"> Hello {{ selectedUser.real_name }}, </h1>
         <h2 style="margin-top:20px;"> Here's an overview of the questions assigned to you: </h2>
 
         <ul class="card">
