--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -22,7 +22,7 @@
                 [routerLink]="['/document-view']">document view</button>
     </mat-menu> -->
 
-    <button mat-raised-button color="accent" (click)="composeClicked()" style="float:right; margin: 1%;">Compose Answer</button>
+    <button mat-raised-button *ngIf="this.showBtn" color="accent" (click)="composeClicked()" style="float:right; margin: 1%;">Compose Answer</button>
 </nav>
 
 <router-outlet></router-outlet>
