Compose answer button and behaviour are working like intended! :)

--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div>
         <img class="system-logo" src="assets/logo.png" alt="">
     </div>
-    <button mat-button [routerLink]="['/start']">parlAI</button>
+    <button mat-button (click)="homeClicked()">parlAI</button>
 
     <!-- <button mat-button
             [matMenuTriggerFor]="menu">navigate</button>
