First steps in adding contact peers

--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -22,6 +22,7 @@
         </mat-card>
       </li>
     </ul>
+    <button mat-raised-button color="accent" (click)="openBottomSheet()">Get help</button>
   </div>
 </div>
 
