--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -21,7 +21,7 @@
         <button mat-menu-item
                 [routerLink]="['/document-view']">document view</button>
     </mat-menu> -->
-
+    <button mat-raised-button color="accent" (click)="openBottomSheet()">Get help</button>
     <button mat-raised-button *ngIf="this.showBtn" color="accent" (click)="composeClicked()" style="float:right; margin: 1%;">Compose Answer</button>
 </nav>
 
