--- a/src/frontend/parlai-app/src/app/contact-peers/contact-peers.component.html
+++ b/src/frontend/parlai-app/src/app/contact-peers/contact-peers.component.html
@@ -3,9 +3,10 @@
     <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title style="font-weight: 400; font-size 14px;">{{user.real_name}}</mat-card-title>
+        <mat-card-subtitle class="expertise">Expertise: {{user.spec_keywords}}</mat-card-subtitle>
         <mat-card-subtitle>Email: {{user.email}}</mat-card-subtitle>
         <mat-card-subtitle>Phone: {{user.phone}}</mat-card-subtitle>
-        <mat-card-subtitle>Expertise: {{user.spec_keywords}}</mat-card-subtitle>
+
       </mat-card-header>
       <!-- <mat-card-actions>
         <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user)">Login</button>
