--- a/src/frontend/parlai-app/src/app/start/start.component.css
+++ b/src/frontend/parlai-app/src/app/start/start.component.css
@@ -1,4 +1,4 @@
-.form-wrapper {
+/* .form-wrapper {
   display: inline-block;
 }
 
@@ -12,7 +12,7 @@
 
 .uploadButton {
     margin:10px;
-}
+} */
 
 .card {
   list-style-type: none;
