--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -26,6 +26,10 @@
                             <mat-form-field>
                                 <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
                             </mat-form-field>
+                            <mat-card-actions class="text-right">
+                              <button mat-raised-button color="primary" *ngIf="i !== 0" (click)="viewFeedbacked(i)" >View Feedback</button>
+                              <button mat-raised-button color="primary" *ngIf="i === 0" disabled="true">Wait For Feedback</button>
+                            </mat-card-actions>
                         </mat-card>
                     </li>
                 </ul>
@@ -40,9 +44,28 @@
             <div class="empty-space" style="margin-top:20px"></div>
             <div class="scrollable">
 
-                <p align="center">
-                    <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
-                </p>
+              <p align="center">
+                <button mat-raised-button color="accent" (click)="resetAnswer()" *ngIf="answers.length > 0" style="margin-right: 15px;">Back to Questions</button>
+                <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
+              </p>
+
+              <ul class="card">
+
+                <li *ngFor="let answer of answers; index as i">
+                  <mat-card class="example-card answer-card">
+                    <mat-card-content>
+                      <div class="content-title">{{answer.content}}--{{answer.id}}</div>
+                    </mat-card-content>
+                    <mat-card-footer>
+                      <div class="author">{{answer.author}}</div>
+                      <div class="date">{{answer.date}}</div>
+                      <div style="clear: both"></div>
+                    </mat-card-footer>
+                  </mat-card>
+                </li>
+              </ul>
+
+
                 <app-scroll-top></app-scroll-top>
 
             </div>
