--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -71,7 +71,7 @@
                                         <mat-card-subtitle>{{document.date}}</mat-card-subtitle>
                                     </mat-card-header>
                                     <mat-card-content>
-                                        <p align="right">"Was it helpful?"</p>
+                                        <p align="right">Was it helpful?</p>
                                     </mat-card-content>
                                     <mat-card-actions>
                                         <button mat-raised-button color="primary" (click)="viewDocumentClicked(document)">View</button>
