--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -1,8 +1,7 @@
 <nav class="sticky" color="primary" id="systemNav">
     <div>
-        <img class="system-logo" src="assets/logo.png" alt="">
+        <img class="system-logo" src="assets/img/parlAI_logo.png" alt="" (click)="homeClicked()">
     </div>
-    <button mat-button (click)="homeClicked()">parlAI</button>
 
     <!-- <button mat-button
             [matMenuTriggerFor]="menu">navigate</button>
