--- a/src/frontend/parlai-app/src/styles.scss
+++ b/src/frontend/parlai-app/src/styles.scss
@@ -32,9 +32,10 @@ html {
 
 .system-logo{
     float: left;
-    height: 60px;
-    margin: 5px;
-    margin-right:20px;
+    height:65px;
+    margin-top:5px;
+    margin-left:5px;
+    cursor: pointer;
 }
 
 .sticky {
