When user presses no, the not helpful card will be no longer visible! :)

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -65,7 +65,7 @@
                         <h2>Retrieved Relevant Documents</h2>
                         <ul class="card" style="cursor:default;">
                             <li *ngFor="let document of selectedQuestion.documents">
-                                <mat-card class="example-card">
+                                <mat-card *ngIf="document.helpful" class="example-card">
                                     <mat-card-header>
                                         <mat-card-title style="font-weight: 400;font-size: 14px;"><strong>{{document.title}}</strong></mat-card-title>
                                         <mat-card-subtitle>{{document.date}}</mat-card-subtitle>
@@ -76,7 +76,7 @@
                                     <mat-card-actions>
                                         <button mat-raised-button color="primary" (click)="viewDocumentClicked(document)">View</button>
 
-                                        <button class="btn" *ngIf="document.visible" style="float:right" (click)="yesBtnClicked(document)" mat-raised-button color="alert">No</button>
+                                        <button class="btn" *ngIf="document.visible" style="float:right" (click)="noBtnClicked(document)" mat-raised-button color="alert">No</button>
                                         <button class="btn" *ngIf="document.visible" style="float:right" (click)="yesBtnClicked(document)" mat-raised-button color="accent">Yes</button>
                                     </mat-card-actions>
                                 </mat-card>
