--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -38,7 +38,7 @@
 
         <div class="column">
             <mat-toolbar class="mat-elevation-z6" color="primary">
-                <span>Final Document</span>
+                <span>Peer Feedback</span>
             </mat-toolbar>
 
             <div class="empty-space" style="margin-top:20px"></div>
