--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -46,7 +46,7 @@
 
               <p align="center">
                 <button mat-raised-button color="accent" (click)="resetAnswer()" *ngIf="answers.length > 0" style="margin-right: 15px;">Back to Questions</button>
-                <button mat-raised-button color="accent" (click)="submitAnswer()">Submit Answer</button>
+                <button mat-raised-button color="accent" [routerLink]="['/question-submitted']">Submit Answer</button>
               </p>
 
               <ul class="card">
@@ -64,6 +64,18 @@
                   </mat-card>
                 </li>
               </ul>
+
+              <mat-vertical-stepper [linear]="false" #stepper *ngIf="answers.length === 0" [selectedIndex]="1">
+                <mat-step [stepControl]="firstFormGroup">
+                  <ng-template matStepLabel>Question Answered</ng-template>
+                </mat-step>
+                <mat-step [stepControl]="secondFormGroup" >
+                  <ng-template matStepLabel>Peer Feedback Received</ng-template>
+                </mat-step>
+                <mat-step [completed]="false">
+                  <ng-template matStepLabel>Ready to Publish</ng-template>
+                </mat-step>
+              </mat-vertical-stepper>
 
 
                 <app-scroll-top></app-scroll-top>
