[API] implemented entity extractor endpoint and frontend functionality

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -50,7 +50,7 @@
                     <div class="row" *ngIf="selectedQuestion.entities">
                         <h2>Recognized Entities</h2>
                         <mat-chip-list>
-                            <mat-chip *ngFor="let ent of selectedQuestion.getEntitiesAsArray()">{{ent}}</mat-chip>
+                            <mat-chip *ngFor="let ent of selectedQuestion.entities">{{ent.text}} - {{ent.label}}</mat-chip>
                         </mat-chip-list>
                     </div>
 
