Implemented document retrieval by keywords in frontend

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -68,7 +68,8 @@
                                 <mat-card *ngIf="document.helpful" class="example-card">
                                     <mat-card-header>
                                         <mat-card-title style="font-weight: 400;font-size: 14px;"><strong>{{document.title}}</strong></mat-card-title>
-                                        <mat-card-subtitle>{{document.date}}</mat-card-subtitle>
+                                        <mat-card-subtitle>{{document.type}}</mat-card-subtitle>
+                                        <mat-card-subtitle>{{document.frontenddate}}</mat-card-subtitle>
                                     </mat-card-header>
                                     <mat-card-content>
                                         <p *ngIf="document.visible" align="right">Was it helpful?</p>
