Users service now allows to set a user.

--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -17,7 +17,7 @@
             <mat-card-subtitle>Expertise: {{user.spec_keywords}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-actions>
-            <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user)">Login</button>
+            <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user.id)">Login</button>
           </mat-card-actions>
         </mat-card>
       </li>
