--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -40,10 +40,10 @@
             <div class="scrollable">
 
                 <div class="information">
-                    <div class="row" *ngIf="selectedQuestion.keywords">
+                    <div class="row" *ngIf="selectedQuestion.keywords?.length">
                         <h2>Keywords</h2>
                         <mat-chip-list>
-                            <mat-chip *ngFor="let kw of selectedQuestion.getKeywordsAsArray()">{{kw}}</mat-chip>
+                            <mat-chip *ngFor="let kw of selectedQuestion.keywords" color="accent" selected="true">{{kw.name}} ({{kw.docCount}})</mat-chip>
                         </mat-chip-list>
                     </div>
 
