--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -14,7 +14,7 @@
             <mat-card-title style="font-weight: 400; font-size: 14px;">{{user.real_name}}</mat-card-title>
             <mat-card-subtitle>Email: {{user.email}}</mat-card-subtitle>
             <mat-card-subtitle>Phone: {{user.phone}}</mat-card-subtitle>
-            <mat-card-subtitle>Expertise: {{user.spec_keywords}}</mat-card-subtitle>
+            <mat-card-subtitle style="word-wrap: break-word;">Expertise: {{user.spec_keywords}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-actions>
             <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user)">Login</button>
