--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -10,7 +10,7 @@
                 <mat-card class="example-card">
                     <mat-card-header>
                         <mat-card-title style="font-weight: 400;font-size: 14px;">{{doc.title}}</mat-card-title>
-                        <mat-card-subtitle>{{doc.keywords}}</mat-card-subtitle>
+                        <mat-card-subtitle>{{doc.keywords.toLowerCase()}}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-actions>
                         <button mat-raised-button color="accent" (click)="answerClicked(doc)">Answer</button>
